# FastAPI-base-app

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: blank.yml
app/: .pre-commit-config.yaml  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2025_03_16_2129-85cf836b1bce_create_users_table.py  2025_03_16_2202-0c2735e78bb7_create_users_table.py  2025_03_16_2206-45dc3840c591_create_cols_in_users_table.py  2025_03_16_2326-2516ea605baf_del_cols.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  users.py
app/core/: config.py
app/core/models/: base.py  db_helper.py  user.py
app/core/schemas/: user_schemas.py
app/crud/: crud_users.py
